2012-05-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Remove mkdir from mountvirtfs because fs is read only

2012-04-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>

   * General update of network scripts ifup/ifdown and services
   ** Add if_true utility function to init_functions
   ** Change variable INTERFACES to COMPONENT_INTERFACES for bridge interface
   ** ifdown now only uses the first SERVICE
   ** Updated ifup.8 to reflect current usage
   ** ifup
   *** Move interface up logic to after service scripts.  Eliminates the 
       need for the LINK_CHECK variable.
   *** Sets the GATEWAY if the variable is set
   *** Add MTU logic to ifup

2012-01-22  Matt Burgess <matthew@linuxfromscratch.org>

   * lfs/init.d/udev: Change udevd path following upstream changes to its
                      location

2011-12-23  Matt Burgess <matthew@linuxfromscratch.org>

   * lfs/init.d/mountvirtfs: Correct permissions on /run/shm

2011-11-28  DJ Lucas <dj@linuxfromscratch.org>

   * lfs/init.d/mountfs: Add '-t nosysfs' to umount command
   * lfs/init.d/mountvirtfs: remove unneeded spaces in output
   * lfs/init.d/rc: Correct double interactive prompt and set prompt defaults
   * lfs/init.d/setclock: Remove screen output from start case (udev)
   * lfs/init.d/udev{,_retry}:  Restore output to screen and log
   * lfs/sbin/ifup: Change "..." to ": " (not awaiting additonal output)

2011-11-14  Bruce Dubbs <bdubbs@linuxfromscratch.org>

   * The following are from suggestions by DJ Lucas
   ** General cleanup of scripts
   ** Move consolelog function to rc
   ** Clean up boot logging functions
   ** Fix interactive prompt between run level S and target run level

2011-10-06  Bryan Kadzban <bryan@linuxfromscratch.org>

   * Add configuration for udev_retry, and remove --type=failed (which does
     not work with recent udev versions anyway, since no events can possibly
     trigger it).  Start with just the "rtc" subsystem.  BLFS should eventually